<resources>
    <string name="app_name">AtRisk</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="are_you_disable">Are you physically disable?</string>
    <string name="street_only">Street Only</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="city_only">City Only</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_number">Phone Number</string>
    <string name="channel_name">\"channel</string>
    <string name="channel_description">dscription</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="Continue">Continue</string>
    <string name="make_profile">Make Profile</string>
</resources>
